[build-system]
requires = ["setuptools>=69", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "asr-uyghur"
version = "0.1.0"
description = "Command line Uyghur automatic speech recognition with a fine-tuned Whisper model."
readme = "README.md"
requires-python = ">=3.10"
license = {file = "LICENSE"}
authors = [
  {name = "baofeidyz"}
]
keywords = ["asr", "speech-recognition", "uyghur", "whisper", "transformers"]
classifiers = [
  "Development Status :: 3 - Alpha",
  "Environment :: Console",
  "Intended Audience :: Developers",
  "License :: OSI Approved :: Apache Software License",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Topic :: Multimedia :: Sound/Audio :: Speech",
]
dependencies = [
  "huggingface-hub>=0.22",
  "librosa>=0.10",
  "torch>=2.1",
  "transformers>=4.38",
]

[project.optional-dependencies]
dev = [
  "pytest>=8.0",
  "ruff>=0.4",
]

[project.scripts]
asr-uyghur = "asr_uyghur.cli:main"

[project.urls]
Homepage = "https://github.com/baofeidyz/asr-uyghur"
Issues = "https://github.com/baofeidyz/asr-uyghur/issues"

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]

[tool.ruff]
line-length = 88
target-version = "py310"

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B"]
